--- a/index.html
+++ b/index.html
@@ -178,12 +178,87 @@
             <h2 class="text-3xl font-bold text-center mb-12" data-aos="fade-up">Professional Experience</h2>
             
             <div class="relative timeline-container" data-aos="fade-up" data-aos-duration="1000">
+
                 <div class="ml-10 md:ml-12 pb-8">
                     <div class="timeline-marker"></div>
                     <div class="bg-white rounded-lg shadow-md p-6 transform transition duration-500 hover:shadow-lg hover:-translate-y-1">
                         <div class="flex flex-col md:flex-row md:justify-between">
                             <div>
-                                <h3 class="text-xl font-semibold text-blue-800">Marketing and Sales Trainee</h3>
+                                <h3 class="text-xl font-semibold text-blue-800">HR Recruiter</h3>
+                                <p class="text-gray-600 mt-1">The Aces Group</p>
+                            </div>
+                            <div class="mt-2 md:mt-0">
+                                <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Sept 2023 - March 2024</span>
+                            </div>
+                        </div>
+                        <div class="mt-4">
+                            <h4 class="font-semibold text-gray-700">Key Responsibilities:</h4>
+                            <ul class="mt-2 space-y-2 text-gray-700">
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Conducted job analysis to understand hiring requirements and define role responsibilities.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Created and posted clear, compelling job descriptions to attract the right candidates.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Utilized multiple sourcing channels including job portals, social media, referrals, and campus recruitment.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Screened resumes and conducted telephonic and in-person interviews to assess candidate fit.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Coordinated with department heads to understand team needs and ensure alignment in hiring process.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Managed end-to-end recruitment cycle from initial sourcing to final selection.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Facilitated interview scheduling and feedback collection from panel members.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Negotiated job offers and ensured smooth onboarding and induction of selected candidates.
+                                </li>
+                                <li class="flex items-start">
+                                    <svg class="h-5 w-5 text-blue-600 mr-2 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                    Maintained and updated recruitment databases and applicant tracking systems.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ml-10 md:ml-12 pb-8">
+                    <div class="timeline-marker"></div>
+                    <div class="bg-white rounded-lg shadow-md p-6 transform transition duration-500 hover:shadow-lg hover:-translate-y-1">
+                        <div class="flex flex-col md:flex-row md:justify-between">
+                            <div>
+                                <h3 class="text-xl font-semibold text-blue-800">HR Internship</h3>
                                 <p class="text-gray-600 mt-1">Gazon Communication India Limited, Pune</p>
                             </div>
                             <div class="mt-2 md:mt-0">
@@ -239,7 +314,7 @@
                     <div class="bg-white rounded-lg shadow-md p-6 transform transition duration-500 hover:shadow-lg hover:-translate-y-1">
                         <div class="flex flex-col md:flex-row md:justify-between">
                             <div>
-                                <h3 class="text-xl font-semibold text-blue-800">Internship</h3>
+                                <h3 class="text-xl font-semibold text-blue-800">Marketing and Sales Trainee</h3>
                                 <p class="text-gray-600 mt-1">Fortis - World - Wide</p>
                             </div>
                         </div>
